--- a/index.html
+++ b/index.html
@@ -34,9 +34,21 @@
 
 <body>
 
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
+
+        <!-- Mini Header -->
+        <div class="container-fluid mini-header hidden-xs">  
+            <div class="container">  
+                <ul class="contact-info list-inline navbar-right">                        
+                    <li class="small">6867 Wynnwood Ln, Houston, TX 77008</li>
+                </ul>            
+            </div>
+        </div>     
+
+        <div class="container topnav">    
+               
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -52,15 +64,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
+                    <li><a href="#showroom">Our Showroom</a></li> 
+                    <li><a href="#location">Location</a></li>                    
+                    <li><a href="">(555) 555-5555</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -70,26 +76,23 @@
 
 
     <!-- Header -->
-    <a name="about"></a>
     <div class="intro-header">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Landing Page</h1>
-                        <h3>A Template by Start Bootstrap</h3>
+                        <h1>The Largest Selection in Houston</h1>
+                        <h3>Electrolux<span class="small">&reg;</span> & Frigidare<span class="small">&reg;</span> appliances</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                <a href="#showroom" class="btn btn-default btn-lg"><i class="fa fa-home fa-fw"></i> <span class="network-name"> View Our Showroom</span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                            </li>
+                                <a href="" class="btn btn-warning btn-lg"><i class="fa fa-phone fa-fw"></i> <span class="network-name"> Call (555) 555-5555</span></a>
+                            </li>  
+                            <br>
+                            <a href="#showroom"><span class="fa fa-angle-down big-arrow"></span></a>
                         </ul>
                     </div>
                 </div>
@@ -102,72 +105,119 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
-
-	<a  name="services"></a>
-    <div class="content-section-a">
-
+    <div id="showroom" class="section content-section-a">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+            <div class="row text-center">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <hr class="section-heading-spacer"><div class="clearfix"></div>                    
+                    <h2 class="section-heading">Our Showroom</h2>
+                    <p class="">
+                        You're invited to experience our showroom right here in heart of Houston or one of our <a href="#" target="_blank">various locations</a>. Our showroom has all of the latest Electrolux & Frigidaire appliances.
+                    </p>
+                    <br>
                 </div>
             </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-    <div class="content-section-b">
-
-        <div class="container">
-
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                <div class="col-sm-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <img class="img-responsive" src="img/electrolux1.jpg" alt="">
+                        </div>
+                        <div class="panel-body">
+                            <h3 class="">Electrolux Side-by-Side Refridgerator</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lectus eros, luctus et enim vitae, placerat suscipit leo. Sed molestie accumsan porttitor. Duis viverra feugiat faucibus. Morbi fringilla diam nec varius gravida. Nullam vel quam vel orci rhoncus suscipit. Curabitur rhoncus tristique finibus. 
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                <div class="col-sm-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <img class="img-responsive" src="img/frigidaire1.jpg" alt="">
+                        </div>
+                        <div class="panel-body">
+                            <h3 class="">Frigidaire Front-Load Washer/Dryer</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lectus eros, luctus et enim vitae, placerat suscipit leo. Sed molestie accumsan porttitor. Duis viverra feugiat faucibus. Morbi fringilla diam nec varius gravida. Nullam vel quam vel orci rhoncus suscipit. Curabitur rhoncus tristique finibus. 
+                        </div>
+                    </div>
+                </div>                
+                <div class="col-sm-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <img class="img-responsive" src="img/electrolux2.jpg" alt="">
+                        </div>
+                        <div class="panel-body">
+                            <h3 class="">Electrolux Built-In Dishwasher</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lectus eros, luctus et enim vitae, placerat suscipit leo. Sed molestie accumsan porttitor. Duis viverra feugiat faucibus. Morbi fringilla diam nec varius gravida. Nullam vel quam vel orci rhoncus suscipit. Curabitur rhoncus tristique finibus. 
+                        </div>
+                    </div>
+                </div>                                                            
+            </div>
+        </div><!-- /.container -->
+    </div><!-- /.content-section-b -->
+
+    <div id="location" class="section content-section-b">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <hr class="section-heading-spacer"><div class="clearfix"></div>                    
+                    <h2 class="section-heading">Our Location</h2>
+                    <br>
+                </div>
+            </div>            
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
+                    <img class="img-responsive" src="img/morrison-logo.png" alt="">
+                    <p>
+                        <a href="" class="btn btn-primary"><span class="network-name">(555) 555-5555</span></a>
+                        <a href="https://goo.gl/maps/GnFgV" target="_blank" class="btn btn-primary"><span class="network-name">Get Directions</span></a>
+                    </p>
+                    <p>                       
+                        6867 Wynnwood Ln, Houston, TX 77008
+                    </p>                    
+                    <p>
+                        <h4>Store Hours</h4>
+                        <table class="table table-condensed text-muted">
+                            <thead>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Monday</th>
+                                    <td>9:00 am - 5:00 pm</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Tuesday</th>
+                                    <td>9:00 am - 5:00 pm</td>        
+                                </tr>
+                                <tr>
+                                    <th scope="row">Wednesday</th>
+                                    <td>9:00 am - 5:00 pm</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Thursday</th>
+                                    <td>9:00 am - 5:00 pm</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Friday</th>
+                                    <td>9:00 am - 5:00 pm</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Saturday</th>
+                                    <td>Closed</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Sunday</th>
+                                    <td>Closed</td>
+                                </tr>                                
+                            </tbody>
+                        </table>
+                    </p>
+                </div>                        
+                <div class="col-md-8 hidden-xs hidden-sm">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d55399.38362369195!2d-95.47836843131624!3d29.793209550303587!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x8640c6e75152a6d3%3A0x1920196c915717e1!2s6867+Wynnwood+Ln%2C+Houston%2C+TX+77008!3m2!1d29.7932147!2d-95.44137459999999!5e0!3m2!1sen!2sus!4v1441319401756" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-b -->
-
-    <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
+        </div><!-- /.container -->
+    </div><!-- /.content-section-b -->
 
 	<a  name="contact"></a>
     <div class="banner">
@@ -175,19 +225,22 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
+                <div class="col-lg-4">
+                    <h2>Visit our store</h2>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <a href="https://goo.gl/maps/aNqdg" target="_blank" class="btn btn-warning btn-lg"><i class="fa fa-map-marker fa-fw"></i> <span class="network-name">Map / Directions</span></a>
+                        </li>                         
+                        <li>
+                            <a href="" class="btn btn-default btn-lg"><i class="fa fa-phone fa-fw"></i> <span class="network-name">(555) 555-5555</span></a>
+                        </li>                        
+                        <li>
+                            <a href="https://twitter.com/morrisonsupply" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
                         <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <a href="https://facebook.com" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                         </li>
                     </ul>
                 </div>
@@ -203,25 +256,20 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 text-center">
                     <ul class="list-inline">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
+                        <li><a href="#showroom">Our Showroom</a></li>
+                        <li class="footer-menu-divider">|</li> 
+                        <li><a href="https://goo.gl/maps/aNqdg" target="_blank">Map & Directions</a></li>
+                        <li class="footer-menu-divider">|</li>
+                        <li><a href="#location">Location</a></li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="primary-info text-muted">
+                        (555) 555-5555
+                        <span class="info-divider">|</span>
+                        6867 Wynnwood Ln, Houston, TX 77008
+                    </p>
+                    <p class="copyright text-muted small">&copy; 2015 Morrison Supply Company</p>
                 </div>
             </div>
         </div>
