--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                         <p>
                                             <li>Luxury-Glide® Cool Zone™ Drawer</li>
                                             <li>Luxury-Glide® Humidity-Controlled Crisper Drawers</li>
-                                            <li>IQ-TouchTM Controls</li>
+                                            <li>IQ-Touch™ Controls</li>
                                             <li>New Luxury-Design® Glass Shelves</li>   
                                         </p>
                                         <h4>Call for Pricing</h4>  
@@ -1019,7 +1019,7 @@
                                             Electrolux® 24" Built-In Dishwasher with IQ-Touch™ Controls
                                         </h3>
                                         <p>
-                                            <li>ProCleanTM System</li>
+                                            <li>ProClean™ System</li>
                                             <li>4x More Water Coverage</li>
                                             <li>30-Minute Fast Wash Cycle</li>
                                             <li>Target Wash Zones</li>
@@ -1041,7 +1041,7 @@
                                             Electrolux® 24" Built-In Dishwasher with IQ-Touch™ Controls
                                         </h3>
                                         <p>
-                                            <li>ProCleanTM System</li>
+                                            <li>ProClean™ System</li>
                                             <li>4x More Water Coverage</li>
                                             <li>30-Minute Fast Wash Cycle</li>
                                             <li>Target Wash Zones</li>                                            
@@ -1063,11 +1063,11 @@
                                             Frigidaire® Professional 24" Built-In Dishwasher
                                         </h3>
                                         <p>
-                                            <li>PowerplusTM 30-Minute Wash</li>
-                                            <li>PrecisionPro Wash ZonesTM</li>
-                                            <li>OrbitPowerTM Wash Technology</li>
-                                            <li>Smudge-ProofTM Stainless Steel</li>
-                                            <li>PowerPlusTM Dry</li>
+                                            <li>Powerplus™ 30-Minute Wash</li>
+                                            <li>PrecisionPro Wash Zones™</li>
+                                            <li>OrbitPower™ Wash Technology</li>
+                                            <li>Smudge-Proof™ Stainless Steel</li>
+                                            <li>PowerPlus™ Dry</li>
                                         </p>
                                         <h4>Call for Pricing</h4>  
                                         <a class="btn btn-primary btn-block"><i class="fa fa-phone fa-fw"></i> 
@@ -1087,8 +1087,8 @@
                                         </h3>
                                         <p>
                                             <li>Excellent Cleaning Performance</li>
-                                            <li>EffortlessTM Dry</li>
-                                            <li>DishSenseTM Technology</li>
+                                            <li>Effortless™ Dry</li>
+                                            <li>DishSense™ Technology</li>
                                             <li>Quick Wash</li>
                                             <li>Adjustable Upper Rack</li>
                                         </p>
@@ -1141,7 +1141,7 @@
                                             <li>Fastest wash time in only 15 minutes</li>
                                             <li>No other washer cleans better</li>
                                             <li>Remove 99% of bacteria with Deep Clean Sanitation Cycle</li>
-                                            <li>PerfectSteamTM gently, yet deeply penetrates fabrics for an enhanced stain removal.</li>
+                                            <li>PerfectSteam™ gently, yet deeply penetrates fabrics for an enhanced stain removal.</li>
                                             <li>Shown with optional pedestal drawer.</li>            
                                         </p>
                                         <h4>Call for Pricing</h4>  
@@ -1164,7 +1164,7 @@
                                             <li>Fastest wash time in only 15 minutes</li>
                                             <li>No other washer cleans better</li>
                                             <li>Remove 99% of bacteria with Deep Clean Sanitation Cycle</li>
-                                            <li>PerfectSteamTM gently, yet deeply penetrates fabrics for an enhanced stain removal.</li>
+                                            <li>PerfectSteam™ gently, yet deeply penetrates fabrics for an enhanced stain removal.</li>
                                             <li>Shown with optional pedestal drawer.</li> 
                                         </p>
                                         <h4>Call for Pricing</h4>  
@@ -1187,7 +1187,7 @@
                                             <li>Fastest wash time in only 15 minutes</li>
                                             <li>No other washer cleans better</li>
                                             <li>Remove 99% of bacteria with Deep Clean Sanitation Cycle.</li>
-                                            <li>PerfectSteamTM gently, yet deeply penetrates fabrics for an enhanced stain removal.</li>
+                                            <li>PerfectSteam™ gently, yet deeply penetrates fabrics for an enhanced stain removal.</li>
                                             <li>Shown with optional pedestal drawer.</li>
                                         </p>
                                         <h4>Call for Pricing</h4>  
@@ -1208,9 +1208,9 @@
                                         </h3>
                                         <p>
                                             <li>Largest Compact Capacity Available</li>
-                                            <li>Perfect SteamTM Washer</li>
+                                            <li>Perfect Steam™ Washer</li>
                                             <li>Stackable Design</li>
-                                            <li>ExpertCareTM Wash System</li>
+                                            <li>ExpertCare™ Wash System</li>
                                             <li>Shown with optional pedestal drawer.</li>        
                                         </p>
                                         <h4>Call for Pricing</h4>  
@@ -1230,7 +1230,7 @@
                                             Frigidaire® 3.8 Cu.Ft. Front Load Washer featuring Ready Steam
                                         </h3>
                                         <p>
-                                            <li>Ready SteamTM</li>
+                                            <li>Ready Steam™</li>
                                             <li>Advanced Rinse Technology</li>
                                             <li>Stainless Steel Drum</li>
                                             <li>Large Capacity</li>
@@ -1280,7 +1280,7 @@
                                             <li>Gentlest Dry</li>
                                             <li>Fastest Dry Time</li>
                                             <li>Largest Capacity Dryer</li>
-                                            <li>Perfect SteamTM Dryer</li>
+                                            <li>Perfect Steam™ Dryer</li>
                                             <li>Shown with optional pedestal drawer.</li>
                                         </p>
                                         <h4>Call for Pricing</h4>  
@@ -1303,7 +1303,7 @@
                                             <li>Gentlest Dry</li>
                                             <li>Fastest Dry Time</li>
                                             <li>Largest Capacity Dryer</li>
-                                            <li>Perfect SteamTM Dryer</li>
+                                            <li>Perfect Steam™ Dryer</li>
                                             <li>Shown with optional pedestal drawer.</li>
                                         </p>
                                         <h4>Call for Pricing</h4>  
@@ -1348,8 +1348,8 @@
                                         <p>
                                             <li>Quick Dry</li>
                                             <li>Large Dryer Capacity</li>
-                                            <li>Ready SteamTM</li>
-                                            <li>One-TouchTM Wrinkle Release</li>
+                                            <li>Ready Steam™</li>
+                                            <li>One-Touch™ Wrinkle Release</li>
                                             <li>Balanced Dry System</li>
                                         </p>
                                         <h4>Call for Pricing</h4>  
@@ -1369,11 +1369,11 @@
                                             Frigidaire® Affinity High Efficiency Electric Dryer
                                         </h3>
                                         <p>
-                                            DrySenseTM Technology
+                                            DrySense™ Technology
                                             Quick Dry
-                                            Fits-MoreTM Dryer
+                                            Fits-More™ Dryer
                                             Energy Saver Option
-                                            One-TouchTM Wrinkle Release
+                                            One-Touch™ Wrinkle Release
 
                                         </p>
                                         <h4>Call for Pricing</h4>  
@@ -1519,6 +1519,7 @@
     <!-- js -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.5/masonry.pkgd.min.js"></script>
     <script src="js/custom.js"></script>
 
 </body>
