--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="row">
 
                 <!-- Tab Nav --> 
-                <aside class="showroom-nav col-sm-2">                                 
+                <aside class="showroom-nav col-sm-3 col-lg-2">                                 
                     <ul class="nav nav-pills nav-stacked" role="tablist">
                         <li role="presentation" class="active"><a href="#cat1" aria-controls="cat1" role="tab" data-toggle="tab">Refrigerators</a></li>
                         <li role="presentation"><a href="#cat2" aria-controls="cat2" role="tab" data-toggle="tab">Cooktops</a></li>
@@ -154,7 +154,7 @@
                 </aside>
                 
                 <!-- Product Content for every category -->
-                <section class="showroom-main col-sm-10">
+                <section class="showroom-main col-sm-9 col-lg-10">
                     <div class="tab-content">                        
                         
                         <!-- Category: Refrigerator -->
