--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                 <div class="col-sm-6 col-md-4 item">
                                     <div class="panel panel-default">
                                         <div class="panel-heading">
-                                            <img class="" src="img/products/refrigerator-EI26SS30JS.png" alt="">
+                                            <img class="" src="img/products/refrigerator-EI26SS30JS.PNG" alt="">
                                         </div>
                                         <div class="panel-body">
                                             <h3 class="">
