--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Morrison Supply Company. The Largest Selection of Appliances in Houston.">
+    <meta name="author" content="Morrison Supply Company">
+    <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>Morrison Supply Company | The Largest Selection of Appliances in Houston</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
