--- a/index.html
+++ b/index.html
@@ -1422,7 +1422,7 @@
                     <img class="img-responsive" src="img/morrison-logo.png" alt="">
                     <p>
                         <a href="" class="btn btn-primary"><span class="network-name">(713) 861-2343</span></a>
-                        <a href="https://goo.gl/maps/GnFgV" target="_blank" class="btn btn-primary"><span class="network-name">Get Directions</span></a>
+                        <a href="https://goo.gl/maps/aNqdg" target="_blank" class="btn btn-primary"><span class="network-name">Get Directions</span></a>
                     </p>
                     <p>                       
                         6867 Wynnwood Ln, Houston, TX 77008
