--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container-fluid mini-header hidden-xs">  
             <div class="container">  
                 <ul class="contact-info list-inline navbar-right">                        
-                    <li class="small">6867 Wynnwood Ln, Houston, TX 77008</li>
+                    <li class="small">6867 Wynnwood Ln Houston, TX 77008</li>
                 </ul>            
             </div>
         </div>     
@@ -89,7 +89,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand topnav" href="#">
-                    <img class="logo" src="img/logo.png" alt="Morrison Supply Company">                    
+                    <img class="logo" src="img/logo-pah.jpg" alt="Morrison Supply Company">                    
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -1430,13 +1430,13 @@
             </div>            
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
-                    <img class="img-responsive" src="img/morrison-logo.png" alt="">
+                    <img class="img-responsive" src="img/logo-pah-lg.png" alt="">
                     <p>
                         <a href="" class="btn btn-primary"><span class="network-name">(713) 861-2343</span></a>
                         <a href="https://goo.gl/maps/aNqdg" target="_blank" class="btn btn-primary"><span class="network-name">Get Directions</span></a>
                     </p>
                     <p>                       
-                        6867 Wynnwood Ln, Houston, TX 77008
+                        6867 Wynnwood Ln Houston, TX 77008
                     </p>                    
                     <p>
                         <h4>Store Hours</h4>
@@ -1531,7 +1531,7 @@
                     <p class="primary-info text-muted">
                         (713) 861-2343
                         <span class="info-divider">|</span>
-                        6867 Wynnwood Ln, Houston, TX 77008
+                        6867 Wynnwood Ln Houston, TX 77008
                     </p>
                     <p class="copyright text-muted small">&copy; 2015 Morrison Supply Company</p>
                 </div>
